--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,17 @@
     padding-bottom: 0%;
 }
 .month{
+    color: whitesmoke;
     border: solid 1px black;
-    background-color:cyan;
+    background-color:black;
     border-radius: 5px;
     padding-left: 20px;
     padding-right: 20px;
+    padding-top: 0%;
     width: 10%;
     height: 20%;
     text-align: center;
     margin-left: 62%;
     font-weight: bold;
-    padding: 0px;}
+    ;}
 
