--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@
     width: 20%;
     height: 20%;
     text-align: center;
-    margin-left: 62%;
+    margin-left: 25%;
+    margin-right: 25%;
     font-weight: bold;
     
     }
